--- a/Views/Product/List.cshtml
+++ b/Views/Product/List.cshtml
@@ -1,8 +1,10 @@
-@model IEnumerable<Product>
-@foreach (var p in Model)
+@model ProductsListViewModel
+@foreach (var p in Model.Products)
 {
     <div>
         <h3>@p.Description</h3>
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
+
+<div page-model+"@Model.PagingInfo" page-action="List"></div>
