--- a/Views/Product/List.cshtml
+++ b/Views/Product/List.cshtml
@@ -7,4 +7,4 @@
     </div>
 }
 
-<div page-model+"@Model.PagingInfo" page-action="List"></div>
+<div page-model="@Model.PagingInfo" page-action="List"></div>
