--- a/Views/Product/List.cshtml
+++ b/Views/Product/List.cshtml
@@ -1,10 +1,20 @@
 @model ProductsListViewModel
 @foreach (var p in Model.Products)
 {
-    <div>
-        <h3>@p.Description</h3>
-        <h4>@p.Price.ToString("c")</h4>
+    <div class="card m-3 rounded">
+        <div class="card-block m-2">
+            <h3>
+                <img src="~/Images/Products/@p.ImageName" alt="@p.ImageName" />
+                <span class="float-right bg-success text-white rounded m-2 p-1">
+                    @p.Price.ToString("c")
+                </span>
+            </h3>
+            <span class="lead">@p.Description</span>
+        </div>
     </div>
 }
 
-<div page-model="@Model.PagingInfo" page-action="List"></div>
+<div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true"
+     page-class="btn" page-class-normal="btn-default"
+     page-class-selected="btn-primary" class="btn-group float-right">
+</div>>
