--- a/Views/Product/List.cshtml
+++ b/Views/Product/List.cshtml
@@ -1,17 +1,7 @@
 @model ProductsListViewModel
 @foreach (var p in Model.Products)
 {
-    <div class="card m-3 rounded">
-        <div class="card-block m-2">
-            <h3>
-                <img src="~/Images/Products/@p.ImageName" alt="@p.ImageName" />
-                <span class="float-right bg-success text-white rounded m-2 p-1">
-                    @p.Price.ToString("c")
-                </span>
-            </h3>
-            <span class="lead">@p.Description</span>
-        </div>
-    </div>
+    @Html.Partial("ProductSummary", p)
 }
 
 <div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true"
